@@ -1,36 +1,33 @@
 use v6;
 
-class Span-0.01;
+class Span-0.01
+{
 
-# use Set::Infinite;
-use Span::Num;
-use Span::Int;
+    use Span::Num;
+    use Span::Int;
 
-has $.span;
+    has $.span;
 
 =for TODO
-
-    * union
-    * intersection
-    * complement
-    * intersects
-        - tests
+    
+    * from_start_and_duration
     
     * compare
-
-    * is_infinite
 
     * set_start_open / set_start_closed
     * set_end_open / set_end_closed
         - better names ?
 
     * set_density / density
-
+    
+    * as_list
+    * empty_span
+        - test with "density"
+    * universal_span
+    
 From "Set" API:
 
     * equal/not_equal
-    * stringify
-    * difference
     * symmetric_difference
     * proper_subset
     * proper_superset
@@ -49,26 +46,25 @@ submethod BUILD ($class: *%param is copy ) {
     $density = 1 if %param<int>;
     $density = %param<density> if defined %param<density>;
 
-    if defined( %param<span> ) 
-    {
-        if %param<span>.isa( $class.ref )
-        {
-            return $class.bless( { span => %param<span>.span } );
-        }
-        if %param<span>.isa( 'Span::Num' )
-        {
-            return $class.bless( { span => %param<span> } );
-        }
-        if %param<span>.isa( 'Span::Int' )
-        {
-            return $class.bless( { span => %param<span> } );
-        }
-        # die "unknown span class";
-        %param<object> = %param<span>;
-    }
+    %param<object> = %param<span> if defined( %param<span> );
 
     if defined( %param<object> ) 
     {
+        if %param<object>.isa( $class.ref )
+        {
+            $.span = %param<object>.span;
+            return;
+        }
+        if %param<object>.isa( 'Span::Num' )
+        {
+            $.span = %param<object>;
+            return;
+        }
+        if %param<object>.isa( 'Span::Int' )
+        {
+            $.span = %param<object>;
+            return;
+        }
         if %param<object>.ref eq 'Array' {
             if %param<object>.elems > 0
             {
@@ -133,6 +129,10 @@ submethod BUILD ($class: *%param is copy ) {
 }
 
 method is_empty () returns bool { return $.span.is_empty }
+
+method is_infinite ($self: ) returns bool { 
+    return $self.start == -Inf || $self.end == Inf
+}
 
 method start () returns Object { return $.span.start }
 
@@ -202,22 +202,43 @@ method end_is_closed () returns Bool {
     return bool::false if $.span.is_empty;
     return $.span.end_is_closed;
 }
+
 method stringify () returns String {
     return '' if $.span.is_empty;
     return $.span.stringify;
 }
+
 method size () returns Object {
     return undef if $.span.is_empty;
     return $.span.size;
 }
 
+submethod normalize_parameter ($self: $span) {
+    return $span.span if $span.isa( $self.ref );
+
+    my $span0 = $self.span;
+    return $span if $span.isa( $span0.ref );
+
+    my ( $start, $end );
+    # XXX - '.can' doesn't work
+    if $span.isa( 'Span::Num' ) || $span.isa( 'Span.Int') 
+    {
+        $start = $span.start;
+        $end = $span.end;
+    }
+    else
+    {
+        $start = $end = $span;
+    }
+    return $span0.new( start => $start, end => $end );
+}
+
 method contains ($self: $span is copy) returns bool {
-    # XXX TODO - the parameter may be a Set::Infinite
     return bool::false if $.span.is_empty;
-    $span = $self.new( object => $span )
-        if ! ( $span.isa( $self.ref ) );
-    my $span1 = $self.span;
-    my @union = $span1.union( $span.span );
+    
+    my $span0 = $self.span;
+    my $span1 = $self.normalize_parameter( $span );
+    my @union = $span0.union( $span1 );
     
     # XXX this should work
     # my @union = $self.span.union( $span.span );
@@ -227,12 +248,11 @@ method contains ($self: $span is copy) returns bool {
 }
 
 method intersects ($self: $span is copy) returns bool {
-    # XXX TODO - the parameter may be a Set::Infinite
     return bool::false if $.span.is_empty;
-    $span = $self.new( object => $span )
-        if ! ( $span.isa( $self.ref ) );
-    my $span1 = $self.span;
-    my @union = $span1.union( $span.span );
+    
+    my $span0 = $self.span;
+    my $span1 = $self.normalize_parameter( $span );
+    my @union = $span0.union( $span1 );
     
     # XXX - this should work
     # my @union = $self.span.union( $span.span );
@@ -240,18 +260,76 @@ method intersects ($self: $span is copy) returns bool {
     return @union.elems == 1;
 }
 
-method union ($self: $span ) returns Set::Infinite {
-    return Set::Infinite.new( spans => ( $self, $span ) )
+method union ($self: $span is copy) returns List of Span { 
+    my $span0 = $self.span;
+    my $span1 = $self.normalize_parameter( $span );
+
+    return $self.new( span => $span1 ) if $self.is_empty;
+
+    my @union = $span0.union( $span1 );
+    return @union.map:{ $self.new( span => $_ ) };
 }
 
-method intersection ($self: $span ) returns Set::Infinite {
-    return Set::Infinite.new( spans => ( $self ) ).intersection( $span ) 
+method intersection ($self: $span is copy) returns List of Span {
+    return $self.clone if $self.is_empty;
+    
+    my $span0 = $self.span;
+    my $span1 = $self.normalize_parameter( $span );
+
+    return $self.new( span => $span1 ) if $span1.is_empty;
+
+    my @span = $span0.intersection( $span1 );
+    return @span.map:{ $self.new( span => $_ ) };
 }
-method complement ($self: ) returns Set::Infinite {
-    return Set::Infinite.new( spans => ( $self ) ).complement
+
+method complement ($self: ) returns List of Span {
+    my $span0 = $self.span;
+    my @span0 = $span0.complement;
+    return @span0.map:{ $self.new( span => $_ ) };
 }
-method difference ($self: $span ) returns Set::Infinite {
-    return Set::Infinite.new( spans => ( $self ) ).difference( $span )
+
+method difference ($self: $span is copy) returns List of Span {
+    return $self.clone if $self.is_empty;
+    
+    my $span0 = $self.span;
+    my $span1 = $self.normalize_parameter( $span );
+
+    my @span1 = $span1.complement;
+    # say $_.stringify for @span1;
+    @span1 = @span1.map:{ $self.intersection( $_ ) };
+    return @span1;
+}
+
+method iterator ($self: ) returns Span::Iterator {
+    if defined( $.density )
+    {
+        warn "can't create an iterator because 'density' is not defined";
+        return;
+    }
+    return Span::Iterator.new( span => $.span );
+}
+
+} # class Span
+
+class Span::Iterator
+{
+    has $.current;
+    has $.span;
+    submethod BUILD ( $.span ) {}
+    method next () {
+        return $.current = $.span.start unless defined( $.current );
+        return $.current if $.current == -Inf;
+        $.current = $.current + $.span.density;
+        return $.current = undef if $.current > $.span.end;
+        return $.current;
+    }
+    method previous () {
+        return $.current = $.span.end unless defined( $.current );
+        return $.current if $.current == Inf;
+        $.current = $.current - $.span.density;
+        return $.current = undef if $.current < $.span.start;
+        return $.current;
+    }
 }
 
 =kwid
@@ -262,19 +340,102 @@ Span - An object representing a single span
 
 = SYNOPSIS
 
-  use Span;
+    use Span;
 
-  # XXX
+    $int_span = Span.new( :int, start => 0, end => 10 );
+    #  [10,20]   11 things
+    
+    $one_day = Date::Duration.new( days => 1 );
+    $date_span = Span.new( :density($one_day), start => $dstart, end => $dend );
+    # [2005-07-15,2005-07-20]    6 days
+
+    $num_span = Span.new( start => -1.0, end => 2.5 );
+    #  [-1.0,2.5]   
+    
+    $datetime_span = Span.new( start => $dtstart, before => $dtend );
+    #  [2005-07-03T00:00:00.0,2005-07-04T00:00:00.0) 
+
+    $time_span = Span.new( start => $tstart, end => $tend );
+    #  [00:00:00.0,24:00:00.0]
 
 = DESCRIPTION
 
-This class represents a single span.
+This class represents a "span".
+
+Depending on your data, you may need a "discrete" or a "continuous" span.
+This class implements both types of spans.
+
+- Discrete span
+
+This is used to represent ranges of things that can be counted, such as beats per minute, 
+wags per second, or holidays per month.
+
+It is also used when the objects represent "chunks" of data, such as date objects without the time part.
+
+Discrete spans take a "units" specifier, which can be either `:int` or `:density($size)`.
+
+The unit specifier is used for several things. 
+For example, when iterating through the span range, the unit is added to the current value to get the next value.
+The unit specifier is also used internally when joining two spans, and when getting the span size.
+
+Create a span of 10 up to 20:
+
+    $int_span = Span.new( :int, start => 0, end => 10 );
+    #  [10,20]   11 things
+    
+Create a span of dates:
+    
+    $one_day = Date::Duration.new( days => 1 );
+    $date_span = Span.new( :density($one_day), start => $dstart, end => $dend );
+    # [2005-07-15,2005-07-20]    6 days
+
+- Continuous span
+
+This type os span is used to represent continuous measurements, such as times, temperatures, or price ranges.
+
+Create a span of real numbers:
+
+    $num_span = Span.new( start => -1.0, end => 2.5 );
+    #  [-1.0,2.5]   
+    
+Create a span representing a day with full precision:
+    
+    $datetime_span = Span.new( start => $dtstart, before => $dtend );
+    #  [2005-07-03T00:00:00.0,2005-07-04T00:00:00.0) 
+
+Create a span representing 0 to 24 hours with full precision:
+    
+    $time_span = Span.new( start => $tstart, end => $tend );
+    #  [00:00:00.0,24:00:00.0]
+
+It would not make sense to iterate through a continuous span, because the "separation" 
+between values would be very close to zero:
+
+    $iterator.next;   # 1.00000000000000
+    $iterator.next;   # 1.00000000000001
+    $iterator.next;   # 1.00000000000002
 
 = CONSTRUCTORS
 
-- `new()`
+- `new( start => 1.0, end => 2.0 )`
 
-Without any parameters, returns an empty span.
+Creates a span.
+
+- `new( after => 1.0, before => 2.0 )`
+
+Creates an "open" span, that does not include the start or end values.
+
+- `new( start => 1.0 )`
+
+Given a start value, creates a span that has infinite size.
+
+- `new( :int, start => 1, end => 2 )`
+
+Creates a span with "integer" semantics.
+
+- `new( :density($day_duration), start => $first_day, end => $last_day )`
+
+Creates a span with "day" semantics.
 
 - `new( object => 1 )`
 
@@ -284,21 +445,11 @@ Creates a span with a single element. This is the same as `new( start => $object
 
 Creates a `Span` object using an existing span.
 
-- `new( start => 1 )`
+- `new()`
 
-Given a start object, returns a span that has infinite size.
-
-- `new( :int, start => 1, end => 2 )`
-
-Creates a span with "integer" semantics.
-
-- `new( start => $first_day, end => $last_day, :density($day_duration) )`
-
-Creates a span with "day" semantics.
+Without any parameters, creates an empty span.
 
 = OBJECT METHODS
-
-    # XXX
 
 The following methods are available for Span objects:
 
@@ -326,44 +477,59 @@ Return the "size" of the span.
 
 For example: if `start` and `end` are times, then `size` will be a duration.
 
-- `contains( Object )` / `intersects( Object )`
+- `contains( $object )` / `intersects( $object )`
 
-These methods return a logical value.
+These methods return a logical value. The argument can be a single value, or a Span.
 
-- union
+- union( $span )
 
-Returns a `Set::Infinite` object.
+Returns a list of Spans. If the spans overlap, then the list contains a single
+span. Otherwise, it contains two spans.
 
 - complement
 
-Returns a `Set::Infinite` object.
+Returns a list of Spans. If one side of the span if Infinite, then the list contains
+a single span. Otherwise, it contains two spans.
 
 - difference
 
-Returns a `Set::Infinite` object.
-
-- intersects
-
-  # XXX
+Returns a list of Spans. The list may have from zero to 2 spans.
 
 - intersection 
 
-Returns a `Set::Infinite` object.
+Returns a list os Spans. The list may be empty, if the spans don't intersect. 
+Otherwise, it contains a single span.
 
 - stringify 
 
-  # XXX
+Return a string representation of the span.
 
 - compare
 
-  # XXX
+Compares the spans numerically. Returns -1, 0, or 1.
 
 - is_empty()
 
-- `span`
+Returns `true` if the span is empty.
 
-Returns a `Span::Num` or `Span::Int` object, which may be useful if you
-are mixing functional/non-functional programming.
+- is_infinite()
+
+Returns true if the start or the end of the span are Infinite.
+
+- `iterator()`
+
+Returns an iterator:
+
+    $iter = $span.iterator;
+    say $i while $i = $iter.next;
+
+The iterator has `next()` and `previous()` methods.
+
+If the span doesn't have a "density" value, this method emits a warning and returns undef.
+
+- `span()`
+
+Returns the internal object that represents the Span.
 
 = AUTHOR
 
